--- a/examples/regression_bikes_river.ipynb
+++ b/examples/regression_bikes_river.ipynb
@@ -107,10 +107,11 @@
    "execution_count": 7,
    "outputs": [],
    "source": [
-    "# Include features that are passed to the model\n",
+    "# Include features that are passed to the model - include categorical variables in feature names to pass them to the model\n",
     "cat_vars = ['station', 'description']\n",
     "num_vars = ['clouds','humidity','pressure','temperature','wind']\n",
     "#feature_names = num_vars + ['description']\n",
+    "#feature_names = num_vars + cat_vars\n",
     "feature_names = num_vars"
    ],
    "metadata": {
@@ -122,7 +123,7 @@
    "execution_count": 8,
    "outputs": [],
    "source": [
-    "# Model and training setup\n",
+    "# Model and training setup - uncomment Pipeline to use categorical variables\n",
     "# model = compose.Pipeline(\n",
     "#     compose.Select('description') | preprocessing.OneHotEncoder()\n",
     "#     | AdaptiveRandomForestRegressor(seed=RANDOM_SEED)\n",
@@ -308,15 +309,6 @@
     "pycharm": {
      "is_executing": true
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
    }
   }
  ],
